@@ -31,11 +31,9 @@
 -(IBAction)importSubscriptions:(id)sender
 {
 	NSOpenPanel * panel = [NSOpenPanel openPanel];
-	NSArray * fileTypes = [NSArray arrayWithObjects:@"txt", @"text", @"opml", @"xml", @"html", NSFileTypeForHFSTypeCode('TEXT'), nil];
-	
 	[panel beginSheetForDirectory:nil
 							 file:nil
-							types:fileTypes
+							types:nil
 				   modalForWindow:mainWindow
 					modalDelegate:self
 				   didEndSelector:@selector(importOpenPanelDidEnd:returnCode:contextInfo:)
@@ -85,8 +83,8 @@
 	{
 		XMLParser * outlineItem = [tree treeByIndex:index];
 		NSDictionary * entry = [outlineItem attributesForTree];
-		NSString * feedTitle = [entry objectForKey:@"title"];
-		NSString * feedDescription = [entry objectForKey:@"description"];
+		NSString * feedTitle = [XMLParser processAttributes:[entry objectForKey:@"title"]];
+		NSString * feedDescription = [XMLParser processAttributes:[entry objectForKey:@"description"]];
 		NSString * feedURL = [XMLParser processAttributes:[entry objectForKey:@"xmlUrl"]];
 		NSString * feedHomePage = [XMLParser processAttributes:[entry objectForKey:@"htmlUrl"]];
 		NSString * bloglinesSubId = [entry objectForKey:@"BloglinesSubId"];
